Project/index.css
/* ... */
[name="color-index"].selected {
	padding: 0;
	border: 2px solid var(--indexed-color-border-color-selected);
}

#color-pillar-canvas {
	position: absolute;
	left: 278px;
	top: 10px;
	border: var(--input-border);
	border-radius: 2px;
}

#color-pillar-frame {
	position: absolute;
	left: 270px;
	top: 8px;
	width: 38px;
	height: 262px;
	z-index: 1;
}

#color-pillar-cursor {
	position: absolute;
	width: 100%;
	height: 7px;
	pointer-events: none;
}

#color-pillar-cursor::before {
	content: "";
	display: block;
	position: absolute;
	left: 0;
	border-top: 3.5px solid transparent;
	border-bottom: 3.5px solid transparent;
	border-left: 6px solid var(--folder-mark-color);
}

#color-pillar-cursor::after {
	content: "";
	display: block;
	position: absolute;
	right: 0;
	border-top: 3.5px solid transparent;
	border-bottom: 3.5px solid transparent;
	border-right: 6px solid var(--folder-mark-color);
}

#color-viewer-frame {
	position: absolute;
	right: 10px;
	top: 10px;
	width: 90px;
	height: 34px;
	background-clip: content-box;
	background-image: var(--grid-background);
	border: var(--input-border);
	border-radius: 2px;
}

#color-viewer {
	position: absolute;
	width: 100%;
	height: 100%;
}

#color-rgba-grid {
	position: absolute;
	left: auto;
	right: 0;
	top: 44px;
	grid-template-columns: 14px 1fr;
}

#color-hex,
#color-r,
#color-g,
#color-b,
#color-a {
	width: 72px;
	font-family: var(--font-family-mono);
}

#color-confirm {
	width: 90px;
	right: 10px;
	bottom: 34px;
}

#color-cancel {
	width: 90px;
	right: 10px;
	bottom: 10px;
}

/* --------------------------------
 * 设置字体窗口
 * --------------------------------
 */
#font {
	width: 324px;
	height: 98px;
}

#font-confirm {
	right: 108px;
	bottom: 10px;
}

#font-cancel {
	right: 10px;
	bottom: 10px;
}

/* --------------------------------
 * 设置字体大小窗口
 * --------------------------------
 */
#fontSize {
	width: 324px;
	height: 98px;
}

#fontSize-confirm {
	right: 108px;
	bottom: 10px;
}

#fontSize-cancel {
	right: 10px;
	bottom: 10px;
}

/* --------------------------------
 * 设置文字位置窗口
 * --------------------------------
 */
#textPosition {
	width: 324px;
	height: 146px;
}

#textPosition-confirm {
	right: 108px;
	bottom: 10px;
}

#textPosition-cancel {
	right: 10px;
	bottom: 10px;
}

/* --------------------------------
 * 设置文字效果窗口
 * --------------------------------
 */
#textEffect {
	width: 324px;
	height: 170px;
}

#textEffect-confirm {
	right: 108px;
	bottom: 10px;
}

#textEffect-cancel {
	right: 10px;
	bottom: 10px;
}

/* --------------------------------
 * 插入图像窗口
 * --------------------------------
 */
#insertImage {
	width: 324px;
	height: 194px;
}

#insertImage-confirm {
	right: 108px;
	bottom: 10px;
}

#insertImage-cancel {
	right: 10px;
	bottom: 10px;
}

/* --------------------------------
 * 设置本地变量窗口
 * --------------------------------
 */
#localVariable {
	width: 324px;
	height: 98px;
}

#localVariable-confirm {
	right: 108px;
	bottom: 10px;
}

#localVariable-cancel {
	right: 10px;
	bottom: 10px;
}

/* --------------------------------
 * 事件窗口
 * --------------------------------
 */
#event {
	width: 1280px;
	height: 700px;
}

#event-open-fieldset {
	left: 10px;
	top: 10px;
	width: 280px;
	bottom: 10px;
}

.event-open-item {
	padding-left: 4px;
	padding-right: 4px;
}

.event-open-item:not(:hover) > .event-close-button {
	visibility: hidden;
}

#event-open-list.alt > node-item.global-event {
	cursor: pointer;
}

#event-open-list.alt > node-item.global-event:hover {
	background-color: var(--command-global-event-link-background);
}

node-item.local-event {
	color: var(--command-color-identifier);
}

node-item.related-event {
	text-decoration: underline var(--command-color-audio);
}

.event-close-button {
	margin-right: 4px;
	color: var(--text-color-unit);
}

.event-close-button:hover {
	color: var(--text-color);
}

.event-close-button:active {
	color: var(--text-color-active);
}

.event-init-text {
	pointer-events: none;
	white-space: nowrap;
	color: var(--text-color-variable-init);
}

.selected > .event-init-text {
	color: var(--text-color-accelerator-selected);
}

#event-commands-fieldset {
	left: 300px;
	top: 10px;
	right: 10px;
	bottom: 40px;
}

#event-commands-gutter-background {
	position: absolute;
	top: 10px;
	bottom: 10px;
	width: 48px;
	pointer-events: none;
	border-right: var(--command-gutter-border);
}

#event-commands-gutter-outer {
	position: absolute;
	top: 10px;
	bottom: 10px;
	width: 48px;
	overflow: hidden;
	pointer-events: none;
}

/* 32px的静态宽度最多适配4位数的宽度 */
#event-commands-gutter-inner {
	display: flex;
	flex-direction: column;
	position: absolute;
	/* margin-top: -20px; */
	width: 32px;
}

.event-commands-line-number {
	height: 20px;
	line-height: 20px;
	text-align: right;
	font-family: var(--font-family-mono);
	color: var(--command-line-number-color);
}

#event-type {
	position: absolute;
	left: 300px;
	bottom: 10px;
	width: 200px;
}

#event-confirm {
	right: 206px;
	bottom: 10px;
}

#event-cancel {
	right: 108px;
	bottom: 10px;
}

#event-apply {
	right: 10px;
	bottom: 10px;
}

/* --------------------------------
 * 事件指令组件
 * --------------------------------
 */
#command-widget {
	width: 400px;
	height: 20px;
	box-shadow: none;
	outline: none;
	/* outline-color: var(--input-border-color-focus); */
}

#command-searcher {
	position: absolute;
	top: 0;
	width: 100%;
	font-family: var(--font-family-mono);
	border-radius: 0;
}

#command-searcher-mark {
	position: absolute;
	left: 0;
	line-height: 18px;
	text-indent: 4px;
	color: var(--text-color-unit);
}

#command-searcher-input {
	padding-left: 12px;
}

/* --------------------------------
 * 指令建议列表
 * --------------------------------
 */
#command-suggestions {
	display: block;
	position: fixed;
	margin-left: var(--1dpx);
	width: calc(400px - var(--2dpx));
	/* box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.5); */
	background-color: var(--suggestion-widget-background);
	outline: var(--window-outline);
	pointer-events: visible;
}
/* ... */

